[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/rain_drops/drop.png" type="Texture" id=1]
[ext_resource path="res://scripts/RainDrop.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/drop.mp3" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 30.0

[node name="RainDrop" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 3.14159
shape = SubResource( 1 )

[node name="DropSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.9

[connection signal="body_entered" from="." to="." method="_on_RainDrop_collected"]
[connection signal="finished" from="DropSound" to="." method="_on_DropSound_finished"]
